Beispielinhalt wird angezeigt

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
                 <textarea 
                     id="markdown-input" 
                     class="markdown-textarea" 
-                    placeholder="Gebe hier deinen Markdown-Text ein..."
+                    placeholder="Lade Beispiel..."
                 ></textarea>
             </div>
 
@@ -55,5 +55,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="example.js"></script>
 </body>
 </html>
